[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name         = "python-utils"
version      = "0.0.1"
description  = "个人常用脚本集合"
readme       = "README.md"
requires-python = ">=3.9"
authors      = [
    { name = "浮生若梦", email = "sun1070753498@163.com" },
]
license-files = ["LICENSE"]
dependencies = [
    "blake3",
    "cmake_format",
    "loguru",
    "matplotlib",
    "paramiko",
    "Pillow",
    "psutil",
    "pycryptodome",
    "requests",
    "watchdog",
]

[tool.setuptools]
package-dir = { "" = "src" }
